--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "next": "13.4.12",
+    "nextjs-basic-auth-middleware": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
